github draft release was added

--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "cli",
     "command"
   ],
-  "private": true
+  "private": true,
+  "dependencies": {
+      "github": "*",
+      "readline-sync": "*",
+      "triplesec": "*"
+  }
 }
